# pidgin

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  pidgin.pid
.github/workflows/: ci.yml
configs/: ACTION_REGISTRY.yaml  PIDGIN_RUNTIME_CONFIG.yaml  REFERENCE_ALIASES.yaml  SAFETY_RULES.yaml  WORKFLOW_REGISTRY.yaml
crates/pidgin-cli/: Cargo.toml
crates/pidgin-cli/src/: main.rs
crates/pidgin-cli/src/commands/: check.rs  context_plan.rs  docs.rs  doctor.rs  expand.rs  init.rs  measure.rs  mod.rs  parse.rs  resolve.rs  run.rs  serve.rs  validate.rs  watch.rs
crates/pidgin-core/: Cargo.toml
crates/pidgin-core/src/: ast.rs  context.rs  errors.rs  lexer.rs  lib.rs  logging.rs  metrics.rs  parser.rs  registry.rs  resolver.rs  router.rs  safety.rs
crates/pidgin-core/src/tests/: ast_tests.rs  expander_tests.rs  lexer_tests.rs  mod.rs  parser_tests.rs  registry_tests.rs  resolver_tests.rs  safety_tests.rs  schema_validator_tests.rs  syntax_validator_tests.rs
crates/pidgin-core/src/validator/: mod.rs  schema.rs  syntax.rs
crates/pidgin-lang/: Cargo.toml  README.md
crates/pidgin-lang-cli/: Cargo.toml
crates/pidgin-lang/src/: ast.rs  context.rs  errors.rs  expander.rs  lexer.rs  lib.rs  logging.rs  main.rs  metrics.rs  parser.rs  registry.rs  resolver.rs  router.rs  safety.rs
crates/pidgin-lang/src/tests/: ast_tests.rs  expander_tests.rs  lexer_tests.rs  mod.rs  parser_tests.rs  registry_tests.rs  resolver_tests.rs  safety_tests.rs  schema_validator_tests.rs  syntax_validator_tests.rs
crates/pidgin-lang/src/validator/: mod.rs  schema.rs  syntax.rs
crates/pidgin-lang/tests/: proptest_parser.rs
crates/pidgin-server/: Cargo.toml
crates/pidgin-server/src/: dashboard.html  lib.rs
docs/: CLI_REFERENCE.md  CONFIG_REFERENCE.md  PUBLISHING_OWNERSHIP.md  SECURITY_REVIEW.md  SPEC.md
examples/basic/: generic_task.pgn  resolvable_task.pgn  unsafe_contradiction.pgn  unsafe_no_human.pgn  unsafe_private_path.pgn
examples/expanded/: RUN_PACKET.example.yaml
examples/fixture_workspace/: .env  primary_subject.md
python/: pyproject.toml
python/adapters/pidgin-crewai/: pyproject.toml
python/adapters/pidgin-crewai/pidgin_crewai/: __init__.py  tools.py
python/adapters/pidgin-crewai/tests/: test_tools.py
python/adapters/pidgin-deepagents/: pyproject.toml
python/adapters/pidgin-deepagents/pidgin_deepagents/: __init__.py  tools.py
python/adapters/pidgin-deepagents/tests/: test_tools.py
python/adapters/pidgin-langgraph/: pyproject.toml
python/adapters/pidgin-langgraph/pidgin_langgraph/: __init__.py  graph.py
python/adapters/pidgin-langgraph/tests/: test_graph.py
python/adapters/pidgin-pydantic/: pyproject.toml
python/adapters/pidgin-pydantic/pidgin_pydantic/: __init__.py  model.py  parser.py
python/adapters/pidgin-pydantic/tests/: test_basemodel.py  test_parser.py
python/pidgin-python/: pyproject.toml
python/pidgin-python/native/: Cargo.toml
python/pidgin-python/native/src/: lib.rs
python/pidgin-python/pidgin_runtime/: __init__.py  client.py  models.py
python/pidgin-python/tests/: test_client.py
python/pidgin_runtime/: __init__.py  client.py  models.py
python/pidgin_runtime.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tests/: test_client.py
wrappers/pidgin-server/: Cargo.toml
wrappers/pidgin-server/src/: lib.rs
