[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pidgin-runtime"
version = "0.1.0"
description = "Python SDK for Pidgin — A compact agent handoff protocol runtime"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
pgn-py = "pidgin_runtime.client:main"
