[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pidgin-runtime"
version = "0.1.0"
description = "Python SDK for Pidgin — A compact agent handoff protocol runtime"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pidgin_runtime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
