[package]
name = "pidgin-cli"
version = "0.2.0"
edition = "2024"
description = "CLI for the Pidgin agent handoff protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/manojpisini/pidgin"
homepage = "https://github.com/manojpisini/pidgin"

[[bin]]
name = "pgn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
pidgin-lang = { path = "../pidgin-lang", version = "0.1.11" }
pidgin-server = { path = "../../wrappers/pidgin-server", version = "0.2.0", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
serde_json = "1"
serde_yaml = "=0.9.34"

[features]
default = []
server = ["dep:pidgin-server", "dep:tokio"]
