[package]
name = "pidgin-lang-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for the Pidgin agent handoff protocol — parse, validate, resolve, expand, and run packets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anomalyco/pidgin-lang"
keywords = ["pidgin", "agent", "handoff", "protocol", "cli"]

[dependencies]
clap = { version = "4.6.1", default-features = false, features = ["std", "derive"] }
pidgin-lang = { path = "../pidgin-lang" }
serde_yaml = "=0.9.34"
