[package]
name = "pidgin-server"
version = "0.2.0"
edition = "2024"
description = "HTTP server for the Pidgin agent handoff protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/manojpisini/pidgin"
homepage = "https://github.com/manojpisini/pidgin"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "=0.9.34"
thiserror = "2"
pidgin-lang = { path = "../../crates/pidgin-lang", version = "0.1.11" }
