[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pidgin-crewai"
version = "0.1.0"
description = "CrewAI integration for the Pidgin agent handoff protocol (PGN)"
requires-python = ">=3.11"
dependencies = [
    "pidgin-pydantic>=0.1",
    "crewai>=0.100",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pidgin_crewai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
