[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pidgin-pydantic"
version = "0.1.0"
description = "Pydantic v2 models for the Pidgin agent handoff protocol (PGN)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pidgin_pydantic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
