[package]
name = "pidgin-python-native"
version = "0.1.0"
edition = "2024"
description = "Native Python bindings bundled with pidgin-python"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
pidgin-lang = { path = "../../../crates/pidgin-lang", version = "0.1.11" }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json = "1"
serde_yaml = "=0.9.34"
